[project]
name = "ai-delivery-validator"
version = "0.1.0"
description = "AI Adoption Factory — lab deploy orchestration and validation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "ai-runtime-manager",
]

[tool.uv.sources]
ai-runtime-manager = { path = "../ai-runtime-manager", editable = true }

[project.scripts]
delivery-generate-kit = "ai_delivery_validator.cli.generate_kit:main"
delivery-deploy-lab = "ai_delivery_validator.cli.deploy_lab:main"
delivery-validate = "ai_delivery_validator.cli.validate:main"
delivery-pipeline = "ai_delivery_validator.cli.run_pipeline:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_delivery_validator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
